# ai-movie-suggester

./: .editorconfig  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.localdev.yml  docker-compose.ollama.yml  docker-compose.test.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  logging_config.py  main.py  middleware.py  models.py  utils.py
backend/app/auth/: crypto.py  dependencies.py  models.py  router.py  service.py  session_store.py
backend/app/chat/: conversation_store.py  models.py  prompts.py  router.py  sanitize.py  service.py
backend/app/devices/: router.py
backend/app/embedding/: __init__.py  models.py  router.py  worker.py
backend/app/images/: router.py
backend/app/jellyfin/: __init__.py  client.py  device_models.py  errors.py  models.py  playback.py  sessions.py  transport.py
backend/app/middleware/: __init__.py  csrf.py  rate_limit.py  security_headers.py
backend/app/ollama/: __init__.py  chat_client.py  client.py  errors.py  models.py  text_builder.py
backend/app/permissions/: __init__.py  dependencies.py  errors.py  models.py  service.py
backend/app/play/: models.py  router.py
backend/app/search/: genre_keywords.py  intent.py  models.py  person_index.py  reranker.py  rewrite_cache.py  rewriter.py  rewriter_prompts.py  router.py  service.py
backend/app/sync/: dependencies.py  engine.py  models.py  router.py
backend/app/vectors/: __init__.py  models.py  repository.py
backend/app/watch_history/: __init__.py  service.py
backend/data/: library.db-shm  sessions.db-shm
backend/tests/: conftest.py  factories.py  test_app_no_ranx_import.py  test_auth_crypto.py  test_auth_dependencies.py  test_auth_router.py  test_auth_service.py  test_auth_session_store.py  test_backfill_country.py  test_chat_client.py  test_chat_prompts.py  test_chat_router.py  test_chat_sanitize.py  test_chat_service.py  test_config.py  test_conversation_store.py  test_cors.py  test_country_codes.py  test_csrf.py  test_device_models.py  test_devices_router.py  test_docs_toggle.py  test_embedding_admin.py  test_embedding_worker.py  test_eval_baseline.py  test_eval_loader.py  test_eval_report.py  test_eval_scoring.py  test_genre_keywords.py  test_health.py  test_health_embeddings.py  test_image_proxy.py  test_intent.py  test_jellyfin_client.py  test_jellyfin_playback.py  test_jellyfin_sessions.py  test_jellyfin_transport.py  test_library_store.py  test_library_store_embedding.py  test_library_store_title_lookup.py  (+27 more)
backend/tests/fixtures/: eval_baseline.json  eval_golden_set.json  query_router_cases.json  (+2 more)
(+413 files in other folders)
