[project]
name = "ai-movie-suggester-backend"
version = "0.1.0"
description = "FastAPI backend for ai-movie-suggester"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "cryptography>=44.0.0",
    "aiosqlite>=0.20.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers"
strict_markers = true
markers = [
    "integration: marks tests as requiring a live Jellyfin instance (deselect with '-m \"not integration\"')",
]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
